2003-05-22  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* elf64-mips.c (elf_mips_gnu_rel16_s2): Add internally used
	R_MIPS_GNU_REL16_S2 support.
	(bfd_elf64_bfd_reloc_type_lookup): Use it.
	(mips_elf64_rtype_to_howto): Use it.
	* elfn32-mips.c (elf_mips_gnu_rel16_s2): Add internally used
	R_MIPS_GNU_REL16_S2 support.
	(bfd_elf32_bfd_reloc_type_lookup): Use it.
	(mips_elf_n32_rtype_to_howto): Use it.

2003-05-21  Stuart F. Downing  <sdowning@fame.com>

	* som.h: Define PA_2_0 before including a.out.h

2003-05-07  Eric Christopher  <echristo@redhat.com>
	    Alexandre Oliva   <aoliva@redhat.com>

	* elfxx-mips.c (_bfd_mips_elf_merge_private_bfd_data): Adjust
	pic tests, change to warning.
	(_bfd_mips_elf_final_link): Remove EF_MIPS_CPIC flag setting.

2003-05-21  Marcus Comstedt  <marcus@mc.pp.se>

	* config.bfd: Check for a target triplet of shl-...-netbsdelf as
	well as shle-...-netbsdelf.  Remove duplicate entry.

2003-05-21  Nick Clifton  <nickc@redhat.com>

	* elf32-xstormy16.c (xstormy16_elf_howto_table): Fix dst_mask
	for X_STORMY16_REL_12 reloc.

	* elf.c (bfd_elf_get_needed_list): Use is_elf_hash_table to check
	the type of the has table in the bfd_link_info structure.
	(bfd_elf_get_runpath_list): Likewise.

2003-05-19  Roland McGrath  <roland@redhat.com>

	* elf.c (bfd_elf_bfd_from_remote_memory): New function.
	* bfd-in.h: Declare it.
	* bfd-in2.h: Regenerated.
	* elfcode.h (NAME(_bfd_elf,bfd_from_remote_memory)): New function.
	* elf-bfd.h (struct elf_backend_data): New function pointer member
	elf_backend_bfd_from_remote_memory.
	(_bfd_elf32_bfd_from_remote_memory, _bfd_elf64_bfd_from_remote_memory):
	Declare them.
	* elfxx-target.h (elf_backend_bfd_from_remote_memory): New macro.
	(elfNN_bed): Add that to the initializer.

2003-05-15  Roland McGrath  <roland@redhat.com>

	* elf.c (elfcore_grok_note): Grok NT_AUXV note, make ".auxv" section.

2003-05-20  Jakub Jelinek  <jakub@redhat.com>
