@@ -1,3 +1,8 @@
+2003-05-27  Richard Sandiford  <rsandifo@redhat.com>
+
+	* elfxx-mips.c (mips_elf_hash_sort_data): Fix formattting.
+	(mips_elf_link_hash_table): Likewise.
+
 2003-05-22  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
 
 	* elf64-mips.c (elf_mips_gnu_rel16_s2): Add internally used
